# mygraphrag

./: demo.py  main.py  pyproject.toml  sections.py  utils.py
webserver/: main.py
webserver/configs/: index_dir  setting.py
webserver/templates/: entities_template.html
webserver/utils/: refer.py
